[gd_scene load_steps=15 format=3 uid="uid://eboa2plfung3"]

[ext_resource type="Script" uid="uid://m1m6sy7xqq2w" path="res://Scripts/space_ship.gd" id="1_ugqdv"]
[ext_resource type="Texture2D" uid="uid://chh0wrjsjlwly" path="res://assets/sprites/Arcade - Space Invaders - Game Graphics and Color Overlays.png" id="2_ekb1a"]
[ext_resource type="FontFile" uid="uid://texlu5sixjai" path="res://assets/fonts/retro_computer_personal_use.ttf" id="3_vap11"]
[ext_resource type="AudioStream" uid="uid://cf38c2y5jvt0x" path="res://assets/sounds/ufo_lowpitch.wav" id="4_wns6p"]
[ext_resource type="AudioStream" uid="uid://b3m3c4s66lg4w" path="res://assets/sounds/ufo_highpitch.wav" id="5_wu3m2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bshnu"]
size = Vector2(16, 7)

[sub_resource type="Animation" id="Animation_8mdx3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpaceShipScore:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"default"]
}

[sub_resource type="Animation" id="Animation_pg26m"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpaceShipScore:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"death"]
}

[sub_resource type="Animation" id="Animation_cfi83"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpaceShipScore:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x1bno"]
_data = {
&"RESET": SubResource("Animation_8mdx3"),
&"death": SubResource("Animation_pg26m"),
&"idle": SubResource("Animation_cfi83")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_t2e6o"]
atlas = ExtResource("2_ekb1a")
region = Rect2(19, 39, 24, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tpi4"]
atlas = ExtResource("2_ekb1a")
region = Rect2(1, 39, 16, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_m2usi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2e6o")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tpi4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_eol2w"]
loop = false
stream_count = 2
stream_0 = ExtResource("5_wu3m2")
stream_1 = ExtResource("5_wu3m2")

[node name="SpaceShip" type="Area2D"]
scale = Vector2(3, 3)
collision_layer = 2
collision_mask = 132
script = ExtResource("1_ugqdv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bshnu")

[node name="SpaceShipScore" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = -10.3333
offset_top = -7.0
offset_right = 11.6667
offset_bottom = 7.0
grow_horizontal = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("3_vap11")
theme_override_font_sizes/font_size = 10
text = "100"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_x1bno")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.84956, 3.29696e-06, 1.54018e-06, 1)
sprite_frames = SubResource("SpriteFrames_m2usi")

[node name="sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wns6p")

[node name="deathsound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPlaylist_eol2w")
playback_type = 1

[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
